[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/Score.gd" type="Script" id=1]
[ext_resource path="res://fonts/Chewy-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[node name="Score" type="Node2D"]
position = Vector2( 34.1531, 197.329 )
script = ExtResource( 1 )

[node name="Player1" type="Label" parent="."]
margin_left = 877.164
margin_top = 667.502
margin_right = 917.164
margin_bottom = 750.502
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Player2" type="Label" parent="."]
margin_left = 1002.39
margin_top = 667.502
margin_right = 1042.39
margin_bottom = 750.502
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Player3" type="Label" parent="."]
margin_left = 1112.44
margin_top = 675.092
margin_right = 1152.44
margin_bottom = 758.092
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Player4" type="Label" parent="."]
margin_left = 1233.87
margin_top = 667.502
margin_right = 1273.87
margin_bottom = 750.502
custom_fonts/font = SubResource( 1 )
text = "0"
